@@ -400,9 +400,15 @@ Priests, Petrus and angels should be able to resurrect dead pets.
 Wand of door creation should create doors to walls.
 Mushrooms in forest. Cause odd effects when eaten.
 (r... damn. I thought I was onto something) Etta Nenialoha in forest looking for mushrooms. (with usual ethanol drinks in stack)
+When many same kind of items on ground the message should say "5 Xs here" not "...several items here"
+There should be many types of attack damage with physical object (eg blunt, sting, chop)
+Movement modes (walk, run, stealth)
+"No load" mode (if weight of stack < 1 kg)
+Flaming sword should burn player also if player doesn't have gauntlets.
 Items inside shelves should take damage from explosions.
 When many same kind of items on ground the message should say "5 Xs here" not "...several items here".
 (d) There should be many types of attack damage with physical object. (eg blunt, sting, chop)
 Movement modes. (walk, run, stealth)
 "No load" mode. (if weight of stack < 1 kg)
 Lanterns inside glass chests should still emit light.
+
