@@ -1,0 +1,24 @@
+Licensing
+---------
+
+All files contained in this release are part of Iter Vehemens ad Necem.
+
+Iter Vehemens ad Necem is Copyright (C) 2001, 2002  Timo Kiviluoto. 
+
+Iter Vehemens ad Necem is free software;  you can redistribute it and/or 
+modify it under the terms of the GNU General Public License as published 
+by the Free Software Foundation;  either version 2 of the License, or (at
+your option) any later version.    
+
+Iter Vehemens ad Necem is distributed in the hope that it will be useful, 
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.    
+
+You should have received a copy of the GNU General Public License
+along with Iter Vehemens ad Necem;  if not, write to the Free Software 
+Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.       
+
+The GNU General Public License can be found in the file `COPYING' in
+this release.  
+
